<package format="2">

	<name>wam_teleop</name>
	<version>1.0.0</version>
	<description>Provides wam to wam teleoperation</description>
	<maintainer email="djm2@ualberta.ca">Dylan Miller</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>

	<exec_depend>roscpp</exec_depend>
	<exec_depend>std_msgs</exec_depend>
</package>
