<package format="2">

	<name>wam_teleop</name>
	<version>1.0.0</version>
	<description>Provides wam to wam teleoperation</description>
	<maintainer email="djm2@ualberta.ca">Dylan Miller</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>


	<depend>roscpp</depend>
	<depend>std_msgs</depend>
	<depend>sensor_msgs</depend>

	<build_depend>message_generation</build_depend>

	<exec_depend>message_runtime</exec_depend>
</package>
